fix: styling word wrap and text-align of figures to figcaptions.

--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ body {
 	text-align: center;
 }
 
-figure {
+figcaption {
 	text-align: left;
+	word-wrap: break-word;
 }
 
 header {
